# HelloWorld_CPP

./: .clang-format  .gitignore  HelloWorld.code-workspace  LICENSE  README.md
src/: CMakeLists.txt  Person.cpp  main.cpp
src/include/Human/: human.h
src/include/Person/: Person.h
src/test/: CMakeLists.txt  test_main.cpp
